--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Geo::CEP - Resolve Brazilian city data for a given CEP
 
 =head1 VERSION
 
-version 0.1
+version 0.2
 
 =head1 SYNOPSIS
 
@@ -70,6 +70,8 @@ Retorna I<0> quando não foi possível encontrar.
 
 Retorna I<HashRef> com os dados de todas as cidades.
 
+=for test_synopsis my ($VAR1);
+
 =for Pod::Coverage BUILD
 DEMOLISH
 get_idx
@@ -78,6 +80,10 @@ bsearch
 =head1 SEE ALSO
 
 =over 4
+
+=item *
+
+L<cep2city>
 
 =item *
 
