--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Geo::CEP - Resolve Brazilian city data for a given CEP
 
 =head1 VERSION
 
-version 0.3
+version 0.4
 
 =head1 SYNOPSIS
 
@@ -72,7 +72,10 @@ Retorna I<HashRef> com os dados de todas as cidades.
 
 =for test_synopsis my ($VAR1);
 
-=for Pod::Coverage BUILD
+=for Pod::Coverage O_RDONLY
+SEEK_END
+SEEK_SET
+BUILD
 DEMOLISH
 get_idx
 bsearch
